tests/syntax-error/array-return.silly
// RUN: cd %S
// RUN: %Not %ExeSilly --no-verbose-parse-error -g array-return.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: array-return.silly:16:24: error: syntax error
// CHECK:    16 | FUNCTION foo( ) : INT32[4]
// CHECK:       |                        ^










FUNCTION foo( ) : INT32[4]
{
    INT32 r[4];

    RETURN r;
};
